--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/ai_safety_db
+MONGODB_URI=mongodb+srv://prabirghosh:227Prabir@cluster0.e8hzg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
